# Grimaldo

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  IDescriptor.h  blake2-impl.h  blake2.h  main.cpp
app/src/main/java/it/pgp/grimaldo/: DoUnlockActivity.java  MainActivity.java  MainWidget.java  VaultActivity.java
app/src/main/java/it/pgp/grimaldo/adapters/: IdentitiesVaultAdapter.java
app/src/main/java/it/pgp/grimaldo/dialogs/: KeyInfoDialog.java  SphincsPlusKeygenDialog.java
app/src/main/java/it/pgp/grimaldo/enums/: Permissions.java
app/src/main/java/it/pgp/grimaldo/utils/: FileSaveFragment.java  FileSelectFragment.java  RootHandler.java
app/src/main/res/layout/: activity_main.xml  id_list_item.xml  key_info_dialog.xml  keygen_dialog.xml  main_widget.xml  vault_list_layout.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: main_widget_info.xml
gradle/wrapper/: gradle-wrapper.properties
server/: RemoteScreenUnlocker.py  ServerManager.py  Sizes.py  Utils.py
